--- a/hack/release.toml
+++ b/hack/release.toml
@@ -20,6 +20,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.12.35
+Kubernetes: 1.33.2
 
 Talos is built with Go 1.24.4.
 """
