--- a/.github/workflows/slack-notify.yaml
+++ b/.github/workflows/slack-notify.yaml
@@ -1,13 +1,13 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-03-24T14:29:42Z by kres 921213e.
+# Generated on 2025-07-14T07:43:31Z by kres c691b83.
 
-name: slack-notify
 "on":
   workflow_run:
     workflows:
       - default
       - integration-qemu-cron
+      - integration-qemu-etcd-cron
       - integration-qemu-enforcing-cron
       - integration-conformance-cron
       - integration-conformance-enforcing-cron
@@ -41,6 +41,7 @@ name: slack-notify
       - integration-gcp-cron
     types:
       - completed
+name: slack-notify
 jobs:
   slack-notify:
     runs-on:
