docs: fix typo in hugo config: pre-releaase
Simple typo fix, appearing in the Release top button on website.

Signed-off-by: Alexandre GV <contact@alexandregv.fr>
Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/website/hugo.toml
+++ b/website/hugo.toml
@@ -143,7 +143,7 @@ prism_syntax_highlighting = false
 
 [[params.versions]]
 url = "/v1.11/"
-version = "v1.11 (pre-releaase)"
+version = "v1.11 (pre-release)"
 
 [[params.versions]]
 url = "/v1.10/"
