--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.12.38
-Kubernetes: 1.34.0-alpha.3
+Kubernetes: 1.34.0-beta.0
 runc: 1.3.0
 containerd: 2.1.3
 Flannel CNI plugin: 1.7.1-flannel1
